name:                castbot
version:             0.1.0.0
homepage:            https://github.com/TechforgoodCAST/castbot#README
license:             MIT
license-file:        LICENSE
author:              Andrew MacMurray
maintainer:          a.macmurray@icloud.com
copyright:           Andrew MacMurray 2017
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Application
                     , Client
                     , Environment
                     , GoogleDrive.Database
                     , GoogleDrive.Snaplet
                     , GoogleDrive.Types
                     , GoogleDrive.Request
                     , Util
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , async
                     , attoparsec
                     , bytestring
                     , containers
                     , datetime
                     , hedis
                     , http-conduit
                     , http-types
                     , mtl
                     , random
                     , snap
                     , snap-core
                     , snap-server
                     , snaplet-redis
                     , lens
                     , text
                     , transformers

executable castbot
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base
                     , castbot

test-suite castbot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base
                     , bytestring
                     , castbot
                     , datetime
                     , hedis
                     , hspec
                     , snap
                     , snap-core
                     , containers

source-repository head
  type:     git
  location: https://github.com/TechforgoodCAST/castbot
